--- a/styles/chmduquesne.tex
+++ b/styles/chmduquesne.tex
@@ -17,7 +17,7 @@ $endif$
 %sectioncolor h=397249
 \setupcolor[hex]
 \definecolor[titlegrey][h=757575]
-\definecolor[sectioncolor][h=FFFFFF]
+\definecolor[sectioncolor][h=000000]
 \definecolor[rulecolor][h=9cb770]
 
 % Enable hyperlinks
